# Reinforcement-Learning-Based-Rotary-Inverted-Pendulum

./: .gitignore  CMakeLists.txt  README.md  build-pendulum-py-driver.sh  build-simulator.sh  meson.build
src/: CMakeLists.txt  build-simulator.sh  dqlearn.py  main.cc  main.py  main_window.cc  main_window.hh  manager.cc  manager.hh  meson.build  pendulum.cc  pendulum.hh  utility.cc
src/Pendulum_Env/Pendulum_Env/: __init__.py
src/Pendulum_Env/Pendulum_Env/envs/: pendulum_env.py
src/pendulum-py-driver/: CMakeLists.txt  pendulum-py-driver.cc  test.py
src/python-interface/: utility-interface.cc  utility-interface.py
src/python-interface/utils/: math.cc  math.py  q_table.cc  qtable.py  state.cc  state.py  umath.py  ustate.py
src/python-interface/utils/test/: state.cc
src/simulation/: RIP.py  dqlearn.py  main.py  pendulum_env.py  qlearn.py  qlearn_driver.py
src/simulation/Pendulum_Env/: setup.py
src/simulation/Pendulum_Env/Pendulum_Env/: __init__.py
src/simulation/Pendulum_Env/Pendulum_Env/envs/: __init__.py  pendulum_env.py  pendulum_env_time_series.py
src/simulation/Pendulum_Env/Pendulum_Env/envs/utils/: __init__.py  pmath.py  rotary_pendulum.py
src/test/: encoders.cc  motor.cc  pendulum.cc
src/utils/: CMakeLists.txt  action_tree.hh  constants.hh  encoders.cc  encoders.hh  math.cc  math.hh  meson.build  motor.cc  motor.hh  pins.hh  pstate.hh  q_table.cc  q_table.hh  q_table_type.hh  qthread.hh  state.cc  state.hh  state_tree.hh  timer.hh  type.hh  utils.hh
src/utils/test/: pstate.cc  q_table.cc
